<resources>
    <string name="app_name">D&amp;D Character</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_settings">Settings</string>
    <string name="choose_race">[Race]</string>
    <string name="damage_type">[Damage Type]</string>
    <string name="vulnerability_type">[Vulnerability]</string>
    <string name="import_button_lbl">Import</string>
    <string name="base_armor_class_title">Base Armor Class</string>
    <string name="armor_class_modifiers_title">Armor Class Modifiers</string>
    <string name="armor_class_label">Armor Class</string>
    <string name="roll_button_label">Roll</string>
    <string name="modifier_label">Modifier</string>
    <string name="result_roll_label">Result</string>
    <string name="add_another_button_label">Add\nAnother</string>
    <string name="total_roll_label">Total</string>
    <string name="racial_bonuses_label">Stat Bonuses</string>
    <string name="strength">Strength</string>
    <string name="dexterity">Dexterity</string>
    <string name="constitution">Constitution</string>
    <string name="intelligence">Intelligence</string>
    <string name="wisdom">Wisdom</string>
    <string name="charisma">Charisma</string>
    <string name="points_remaining">Points Remaining</string>
    <string name="choose_label">Choose</string>
    <string name="effects_label">Effects:</string>
    <string name="ok_button_label">OK</string>
    <string name="deleting_label">Deleting</string>
    <string name="undo_button_label">Undo</string>
    <string name="component_search_hint">Name, terms</string>
    <string name="cancel_button_label">Cancel</string>
    <string name="done_button_label">Done</string>
    <string name="previous_button_label">Previous</string>
    <string name="next_button_label">Next</string>
    <string name="end_effect_button_label">End Effect</string>
    <string name="deleting_effect_label">Deleting effect</string>
    <string name="proficiencies_label">Proficiencies</string>
    <string name="armor_title">Armor</string>
    <string name="weapons_title">Weapons</string>
    <string name="tools_title">Tools</string>
    <string name="money_title">Money</string>
    <string name="copper_pieces_label">CP</string>
    <string name="silver_pieces_label">SP</string>
    <string name="electrum_pieces_label">EP</string>
    <string name="gold_pieces_label">GP</string>
    <string name="platinum_pieces_label">PP</string>
    <string name="equipment_title">Equipment</string>
    <string name="use_button_label">Use</string>
    <string name="use_label">Use</string>
    <string name="applicable_features_label">Applicable Features and Effects</string>
    <string name="restore_label">Restore</string>
    <string name="feature_resets_title">Feature Resets</string>
    <string name="total_label">Total</string>
    <string name="die_label">Die</string>
    <string name="current_dice_remaining_label">Current</string>
    <string name="result_dice_restore_label">Result</string>
    <string name="damage_radio_button_label">Damage</string>
    <string name="heal_radio_button_lbl">Heal</string>
    <string name="temp_hp_radio_lbl">Temp HP</string>
    <string name="hp_hint">HP</string>
    <string name="starting_hp">Starting HP</string>
    <string name="final_hp">Final HP</string>
    <string name="hit_die">Hit Die</string>
    <string name="constitution_modifier_label">Constitution Modifier</string>
    <string name="hp_increase">HP increase</string>
    <string name="hp_healing_title">Hit Point Healing</string>
    <string name="full_healing_checkbox">Full healing</string>
    <string name="healing">Healing</string>
    <string name="no_helaing_required">No Healing Required</string>
    <string name="hit_dice_restoration">Hit Dice Restoration</string>
    <string name="short_armor_class_label">AC</string>
    <string name="speed_label">Speed</string>
    <string name="initiative_label">Initiative</string>
    <string name="hit_point_label">Hit Points</string>
    <string name="temp_hp">Temp HP</string>
    <string name="short_passive_perception_label">Pass. Perc.</string>
    <string name="proficiency">Proficiency</string>
    <string name="saving_throws_title">Saving Throws</string>
    <string name="skills_title">Skills</string>
    <string name="short_current_money_label">Cur.</string>
    <string name="add">Add</string>
    <string name="notes">Notes</string>
    <string name="enter_note_hint">Enter notes</string>
    <string name="experience_label">Experience</string>
    <string name="age_label">Age</string>
    <string name="height_label">Height</string>
    <string name="weight_label">Weight</string>
    <string name="eye_color_label">Eyes</string>
    <string name="skin_label">Skin</string>
    <string name="hair_label">Hair</string>
    <string name="languages_label">Languages</string>
    <string name="alignment_label">Alignment</string>
    <string name="specialty_label">Specialty</string>
    <string name="personality_traits_label">Personality Traits</string>
    <string name="ideals_label">Ideals</string>
    <string name="bonds_label">Bonds</string>
    <string name="flaws_label">Flaws</string>
    <string name="backstory_label">Character Backstory</string>
    <string name="hit_dice_healing">Hit Dice Healing</string>
    <string name="extra_healing">Extra healing</string>
    <string name="class_label">Class</string>
    <string name="caster_stat_column_label">Casting\nStat</string>
    <string name="cantrips_known_column_label">Cantrips\nknown</string>
    <string name="spells_known_column_label">Spells\nknown</string>
    <string name="spells_prepared_column_label">Spells\nprepared</string>
    <string name="max_spell_level_column_label">Max\nLevel</string>
    <string name="cantrips_title">Cantrips</string>
    <string name="level">Level</string>
    <string name="spell_slots_label">Slots</string>
    <string name="max_spell_level">Max Spell Level</string>
    <string name="caster_info_title">Casting info</string>
    <string name="spells_title">Spells</string>
    <string name="attack_bonus_label">Attack Bonus</string>
    <string name="damage_label">Damage</string>
    <string name="two_handed_checkbox">Two Handed</string>
    <string name="use_dexterity_checkbox">Use Dexterity</string>
    <string name="ammunition_label">Ammunition:</string>
    <string name="attack_roll">Attack Roll</string>
    <string name="damage_roll">Damage Roll</string>
    <string name="name_label">Name</string>
    <string name="current_xp">Current XP</string>
    <string name="add_xp">Add XP</string>
    <string name="divided_amongst_label">Divided amongst</string>
    <string name="party_members_label">party members</string>
    <string name="your_xp_gain">Your XP Gain</string>
    <string name="final_xp">Final XP</string>
    <string name="import_path_hint">/file/path</string>
    <string name="import_from_hint">[Import From]</string>
    <string name="level_n">Level %d</string>
    <string name="increase_statname_by_to">Increase %1$s by %2$d to %3$d</string>
    <string name="fraction_d_slash_d">%1$d / %2$d</string>
    <string name="enter_hp_between_1_and_n">Enter an hp value between 1 and %d</string>
    <string name="class_spinner_hint">[Class]</string>
    <string name="archtype_hint">Archetype</string>
    <string name="choose_subclass_error">Choose subclass</string>
    <string name="armor_class_base_formula">=%s</string>
    <string name="class_and_level">%1$s (%2$d)</string>
    <string name="stat_and_mod">%1$s (%2$s DC=%3$d)</string>
    <string name="too_many_cantrips_for_class">Too many cantrips for %s</string>
    <string name="too_many_known_spells_for_class">Too many known spells for %s</string>
    <string name="too_many_prepared_spells_for_class">Too many prepared spells for %s</string>
    <string name="current_level">Current Level</string>
    <string name="need_xp_for_next_level">Need %,d</string>
    <string name="uses">Uses</string>
    <string name="pool">Pool</string>
    <string name="refreshes_on_s">Refreshes on %s</string>
    <string name="action_with_cost">%1$s (%2$d)</string>
    <string name="enter_number_less_than_equal_n"><![CDATA[Enter a number <= %d]]></string>
    <string name="heal">Heal</string>
    <string name="base_stat">Base Stat</string>
    <string name="invalid_number">Invalid number</string>
    <string name="critical_failure">Critical Failure</string>
    <string name="critical_success">Critical Success</string>
    <string name="statname_modifier_label">%s modifier</string>
    <string name="statname_saving_throw_title">%s Saving Throw</string>
    <string name="effect_not_active">Not active</string>
    <string name="characters_label">Characters</string>
    <string name="recent_characters_label">Recent Characters</string>
    <string name="backgrounds">Backgrounds</string>
    <string name="races">Races</string>
    <string name="classes">Classes</string>
    <string name="items">Items</string>
    <string name="feats">Feats</string>
    <string name="effects">Effects</string>
    <string name="import_action">Import</string>
    <string name="short_rest">Short Rest</string>
    <string name="long_rest">Long Rest</string>
    <string name="add_effect">Add Effect</string>
    <string name="level_up">Level Up</string>
    <string name="delete">Delete</string>
    <string name="cantrip_label">Cantrip</string>
    <string name="skill_proficiencies">Skill proficiencies</string>
    <string name="saving_throw_proficiencies">Saving Throw proficiencies</string>
    <string name="tool_proficiencies">Tool proficiencies</string>
    <string name="armor_proficiencies">Armor proficiencies</string>
    <string name="weapons_proficiencies">Weapons proficiencies</string>
    <string name="equipment">Equipment</string>
    <string name="language">Language</string>
    <string name="normal_advantage">Normal</string>
    <string name="advantage">Advantage</string>
    <string name="disadvantage">Disadvantage</string>
    <string name="choose_a_background">Choose a Background</string>
    <string name="choose_a_race">Choose a Race</string>
    <string name="edit_class">Edit your Class</string>
    <string name="add_class_level">Add a Class Level</string>
    <string name="specialties">Specialties</string>
    <string name="personality_traits">Personality Traits</string>
    <string name="bonds">Bonds</string>
    <string name="flaws">Flaws</string>
    <string name="ideals">Ideals</string>
    <string name="background_prompt">[Background]</string>
    <string name="race_prompt">[Race]</string>
    <string name="character_class_levels">Character Class Levels</string>
    <string name="already_has_effect">Character already has effect \'%s\'</string>
    <string name="armor_class_title">Armor Class</string>
    <string name="versatile">Versatile</string>
    <string name="finesse">Finesse</string>
    <string name="proficiency_type_proficiencies">%s proficiencies</string>
    <string name="weapon_attack">Weapon Attack</string>
    <string name="choose_one_error">Choose one</string>
    <string name="choose_n">Choose %d</string>
    <string name="experience_title">Experience</string>
    <string name="enter_positive_number_error">Enter a positive number</string>
    <string name="languages_known_title">Languages Known</string>
    <string name="choose_subrace_error">Choose subrace</string>
    <string name="subrace_prompt">[SubRace]</string>
    <string name="long_rest_title">Long Rest</string>
    <string name="short_rest_title">Short Rest</string>
    <string name="caster_class_prompt">[Caster Class]</string>
    <string name="current_slots">Current Slots</string>
    <string name="final_slots">Final Slots</string>
    <string name="spell_level">Spell Level</string>
    <string name="add_character">Create a new Character</string>
</resources>