<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/add_character"
            android:icon="@android:drawable/ic_menu_add"
            android:title="@string/add_character"></item>
        <item
            android:id="@+id/nav_characters"
            android:icon="@android:drawable/ic_menu_camera"
            android:title="@string/characters_label"></item>
        <item
            android:id="@+id/nav_recent_characters"
            android:title="@string/recent_characters_label">
            <menu></menu>
        </item>

    </group>
    <group android:checkableBehavior="single">
        <item android:title="Components">
            <menu>
                <item
                    android:id="@+id/nav_backgrounds"
                    android:icon="@android:drawable/ic_menu_gallery"
                    android:title="@string/backgrounds" />
                <item
                    android:id="@+id/nav_races"
                    android:icon="@android:drawable/ic_menu_slideshow"
                    android:title="@string/races" />
                <item
                    android:id="@+id/nav_classes"
                    android:icon="@android:drawable/ic_menu_manage"
                    android:title="@string/classes" />
                <item
                    android:id="@+id/nav_items"
                    android:icon="@android:drawable/ic_menu_manage"
                    android:title="@string/items" />
                <item
                    android:id="@+id/nav_spells"
                    android:icon="@android:drawable/ic_menu_manage"
                    android:title="@string/spells_title" />
                <item
                    android:id="@+id/nav_feats"
                    android:icon="@android:drawable/ic_menu_manage"
                    android:title="@string/feats" />
                <item
                    android:id="@+id/nav_effects"
                    android:icon="@android:drawable/ic_menu_manage"
                    android:title="@string/effects" />
            </menu>
        </item>

    </group>

    <item android:title="@string/import_action">
        <menu>
            <item
                android:id="@+id/nav_import"
                android:icon="@android:drawable/ic_menu_add"
                android:title="@string/import_action" />
        </menu>
    </item>

    <item android:title="@string/export">
        <menu>
            <item
                android:id="@+id/nav_share"
                android:icon="@android:drawable/ic_menu_share"
                android:title="@string/share" />
            <item
                android:id="@+id/nav_send"
                android:icon="@android:drawable/ic_menu_send"
                android:title="@string/send" />
        </menu>
    </item>

</menu>