<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <TableLayout
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_gravity="center_horizontal"
        android:gravity="center_horizontal">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <com.oakonell.dndcharacter.views.MyEditText
                android:id="@+id/strength"
                style="@style/custom_stat_edit_style" />

            <TextView
                style="@style/custom_stat_label_style"
                android:text="@string/strength" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <com.oakonell.dndcharacter.views.MyEditText
                android:id="@+id/dexterity"
                style="@style/custom_stat_edit_style" />

            <TextView
                style="@style/custom_stat_label_style"
                android:text="@string/dexterity" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <com.oakonell.dndcharacter.views.MyEditText
                android:id="@+id/constitution"
                style="@style/custom_stat_edit_style" />

            <TextView
                style="@style/custom_stat_label_style"
                android:text="@string/constitution" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <com.oakonell.dndcharacter.views.MyEditText
                android:id="@+id/intelligence"
                style="@style/custom_stat_edit_style" />

            <TextView
                style="@style/custom_stat_label_style"
                android:text="@string/intelligence" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <com.oakonell.dndcharacter.views.MyEditText
                android:id="@+id/wisdom"
                style="@style/custom_stat_edit_style" />

            <TextView
                style="@style/custom_stat_label_style"
                android:text="@string/wisdom" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <com.oakonell.dndcharacter.views.MyEditText
                android:id="@+id/charisma"
                style="@style/custom_stat_edit_style" />

            <TextView
                style="@style/custom_stat_label_style"

                android:text="@string/charisma" />
        </TableRow>
    </TableLayout>

</LinearLayout>