<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    style="@style/ac_style"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"

    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <Button
            android:id="@+id/attack_roll_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/roll_button_label" />


        <TextView
            android:id="@+id/attack_roll1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center_horizontal"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:visibility="gone" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:gravity="center_horizontal"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/attack_modifier_lbl"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/modifier_label"
            android:textAppearance="?android:attr/textAppearanceLarge" />

        <TextView
            android:id="@+id/attack_roll_modifier"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:minEms="4"
            android:textAppearance="?android:attr/textAppearanceLarge"
            tools:text="-2" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:gravity="center_horizontal"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/textView10"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/result_roll_label"
            android:textAppearance="?android:attr/textAppearanceLarge" />


        <TextView
            android:id="@+id/attack_roll_total"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:minEms="4"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:visibility="gone" />

        <LinearLayout
            android:id="@+id/damage_input"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <com.oakonell.dndcharacter.views.MyEditText
                android:id="@+id/attack_roll_input"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:inputType="number"
                android:minEms="4"
                android:textAppearance="?android:attr/textAppearanceLarge" />

            <com.oakonell.dndcharacter.views.NoDefaultSpinner
                android:id="@+id/attack_roll_input_type"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="16dp"
                android:prompt="@string/damage_type" />
        </LinearLayout>
    </LinearLayout>

    <Button
        android:id="@+id/add_another"
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:text="@string/add_another_button_label" />

    <LinearLayout
        android:id="@+id/total_group"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="vertical">

        <android.support.v7.widget.RecyclerView
            android:id="@+id/damages"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            tools:listitem="@layout/damage_row" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:gravity="center_horizontal"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/total_roll_label"
                android:textAppearance="?android:attr/textAppearanceLarge" />

            <TextView
                android:id="@+id/attack_roll_final_total"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:minEms="4"
                android:textAppearance="?android:attr/textAppearanceLarge" />

        </LinearLayout>
    </LinearLayout>

</LinearLayout>